# m183_jwt_secure_user_management

./: Secure UserManagement Doku.docx  docker-compose.yml
api/: .env  Cargo.toml  secret.key
api/migrations/2019-06-18-070952_create-table-user/: up.sql
api/src/: cors_options.rs  db.rs  jwt_impl.rs  main.rs  models.rs  pw_hashing.rs  routes.rs  schema.rs
frontend/: elm.json  elm_compiled.js  index.html  package.json
frontend/Html/: Login.html  Profile.html  Register.html
frontend/elm-stuff/0.19.0/: Main.elmi  Main.elmo
frontend/src/: Main.elm
