[package]
name = "api"
version = "0.1.0"
authors = ["Dominik Rosser <dominik.rosser@protonmail.ch>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.1", default-features = false }
rocket_codegen = "0.4.1"
rocket_contrib = "0.4.1"
rocket_cors = "0.5.0"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json ="1.0.39"
argon2rs = "0.2.5"
rand = "0.6.5"
time = "0.1.42"
jsonwebtoken = "6.0.1"

[replace]
"cookie:0.11.0" = { git = 'https://github.com/alexcrichton/cookie-rs.git', rev = "c59d94e1492f2aa8ce0949335d494322ca25366e" }